plugins/mermaid/plugin/src/test/resources/intention/declarations/checkout.mermaid
gitGraph
  checkout <error descr="Unresolved branch">master</error>
  checkout "<error descr="Unresolved branch">master</error>"